# Arrows

./: .clang-format  .gitignore  .gitmodules  Arrows.sln  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  conanfile.txt  vcpkg.json
.github/workflows/: manual_build.yml
3th_party/imgui/: imconfig.h
3th_party/stb_image/: CMakeLists.txt
Arrows/: Arrows.vcxproj  Arrows.vcxproj.filters
Arrows/glad/: glad.c
Arrows/src/: main.cpp
Arrows/src/graphics/: Drawable.h  Shader.cpp  Shader.h
Arrows/src/mvc/: App.cpp  App.h  Controller.cpp  Controller.h  Model.cpp  Model.h  View.cpp  View.h
Arrows/src/mvc/command/: MCommand.h
Arrows/src/mvc/event/: MEvent.h
Arrows/src/mvc/observer/: Observer.h  Subject.h
Arrows/src/mvc/observer/command/: MCommand.h
Arrows/src/resourсe/: Resource.h
Arrows/src/systems/: GDI.cpp  Input.cpp  Input.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
include/glad/: glad.h
include/kwee/: kwee.h
include/kwee/core/: EntryPoint.h  api.h
include/kwee/game_primitives/: Camera.h  Collider.h  GameObject.h  Scene.h  Transformable.h
include/kwee/graphics/: Color.h  Mesh.h  Shader.h  Texture.h
include/kwee/systems/: Application.h  Input.h  PhysicEngine.h  ResourceManager.h
saves/: default.json  my1.json
src/: .Grid.cpp.swp  App.cpp  App.h  ArrowUIButton.cpp  ArrowUIButton.h  Grid.cpp  Grid.h  World.cpp  World.h  main.cpp  main.h
src/elements/: And.cpp  And.h  Arrow.cpp  Arrow.h  Block.cpp  Block.h  DoubleWire.cpp  DoubleWire.h  Lever.cpp  Lever.h  Not.cpp  Not.h  TreeWire.cpp  TreeWire.h  Wire.cpp  Wire.h
src/engine/: Camera.cpp  Input.cpp  PhysicEngine.cpp  Scene.cpp  Shader.cpp  Transformable.cpp
src/kwee/: kwee.h
src/kwee/core/: main.h
src/kwee/game_primitives/: Camera.cpp  Collider.cpp  Collider.h  GameObject.cpp
src/kwee/graphics/: Mesh.cpp  Mesh.h  Shader.h  Sprite.cpp  Sprite.h  Texture.cpp  Texture.h
src/kwee/systems/: Application.cpp  Application.h  Input.h  PhysicEngine.h  ResourceManager.cpp  ResourceManager.h  ResourceManagerBase.cpp  ResourceManagerBase.h
src/res/: standart_shaders.res.h
